--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,8 @@ matrix:
 script:
 - >
     if [ "$PHPUNIT" = "true" ]; then
-        composer run-script post-install-cmd && \
         touch src/Graviton/I18nBundle/Resources/translations/i18n.de.odm && \
-        touch src/Graviton/I18nBundle/Resources/translations/i18n.es.odm && \
+        touch src/Graviton/I18nBundle/Resources/translations/i18n.en.odm && \
         if [ "$PHPUNIT_SUITE" == "integration" ]; then
             php app/console graviton:generate:build-indexes
         fi && \
