--- a/src/Graviton/AuditTrackingBundle/Resources/config/parameters.yml
+++ b/src/Graviton/AuditTrackingBundle/Resources/config/parameters.yml
@@ -24,5 +24,5 @@ parameters:
         exceptions: false
         # Exclude header status exceptions code, 400=bad request, form validation
         exceptions_exclude: [400]
-        # Exlucde listed URLS, array
-        exlude_urls: ["/auditing"]
+        # Exclude listed URLS, array
+        exclude_urls: ["/auditing"]
