--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr-0": { "Graviton": "src/"}
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.5",
+        "phpunit/phpunit": "@stable",
         "squizlabs/php_codesniffer": "~2.6",
         "libgraviton/codesniffer": "~1.3"
     },
