EVO-7573 Audit URL in link header and update for matches header links. Test have been updated for the new header.

--- a/src/Graviton/AuditTrackingBundle/Resources/config/services.yml
+++ b/src/Graviton/AuditTrackingBundle/Resources/config/services.yml
@@ -39,6 +39,7 @@ services:
             logger: '@monolog.logger'
             doctrine: '@doctrine_mongodb'
             securityUtils: '@graviton.security.service.utils'
+            router: "@router"
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: persistEvents, priority: -2 }
 
