add name to index

--- a/src/Graviton/AuditTrackingBundle/Resources/config/doctrine/AuditTracking.mongodb.yml
+++ b/src/Graviton/AuditTrackingBundle/Resources/config/doctrine/AuditTracking.mongodb.yml
@@ -30,4 +30,5 @@ Graviton\AuditTrackingBundle\Document\AuditTracking:
           createdAt:
             order: asc
         options:
+          name: auditIdx
           background: true
