--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "graviton/link-header-rel-parser": "~1"
     },
     "autoload": {
-        "psr-0": { "Graviton": "src/"}
+        "psr-4": { "Graviton\\AuditTrackingBundle\\": "src/"}
     },
     "require-dev": {
         "phpunit/phpunit": "@stable",
