--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,3 +1,32 @@
+parameters:
+    graviton_audit_tracking:
+        # General on/off switch
+        log_enabled: true
+        # Localhost and not Real User on/off switch
+        log_test_calls: false
+        # Store request log also on 400 error
+        log_on_failure: false
+        # Request methods to be saved, array PUT,POST,DELETE,PATCH...
+        requests: []
+        # Store full request header request data.
+        request_headers: false
+        # Store full request content body. if true full lenght, can be limited with a integer
+        request_content: false
+        # Store reponse basic information. if true full lenght, can be limited with a integer
+        response: false
+        # Store full response header request data.
+        response_headers: false
+        # Store response body content
+        response_content: false
+        # Store data base events, array of events, insert, update, delete
+        database: ['insert','update','delete']
+        # Store all exception
+        exceptions: false
+        # Exclude header status exceptions code, 400=bad request, form validation
+        exceptions_exclude: [400]
+        # Exclude listed URLS, array
+        exclude_urls: ["/auditing", "/event/"]
+
 services:
     graviton.audit.controller.default:
         class: Graviton\AuditTrackingBundle\Controller\DefaultController
@@ -35,6 +64,7 @@ services:
     graviton.audit.store.activity:
         class: Graviton\AuditTrackingBundle\Manager\StoreManager
         arguments:
+            - '@request_stack'
             - '@graviton.audit.manager.activity'
             - '@monolog.logger'
             - '@doctrine_mongodb'
